# aastraal

./: .gitignore  README.md
aastraal-client-brick/: aastraal-client-brick.cabal  doc  go_to_docs.sh  launch_emacs_client.sh  run.sh  stack.yaml
aastraal-client-brick/app/: Main.hs
aastraal-client-brick/src/: .#Command.hs  Ack.hs  AppState.hs  Command.hs  CustomEvent.hs  EditDemo.hs.txt  IoNetwork.hs  KeyHandler.hs  Lib.hs  Notification.hs  NotificationHandler.hs  Task.hs  TimeLog.hs
aastraal-node-central/: README.md  aastraal-node-central.cabal
aastraal-node-local/: aastraal-node-local.cabal  build.sh  kill_emacs_daemon.sh  run.sh  stack.yaml
aastraal-node-local/app/: Controller.hs  Main.hs
aastraal-node-local/src/: Ack.hs  AppEvent.hs  AppState.hs  BasicConcurrentServer.hs  BasicConcurrentServerB.hs  BasicConcurrentServerC.hs.txt  Command.hs  DecisionEngine.hs  EventSourcing.hs  FileDataBase.hs  Notification.hs  Projector.hs  ServerOtherVersion.hs  SimpleTCPServer.hs  Task.hs  TimeLog.hs  TimeLogger.hs  Yaml.hs
