name:                aastraal-client-brick
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/aastraal-client-brick
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  IoNetwork
  build-depends:       base >= 4.7 && < 5
                    ,  brick >= 0.10 
                    ,  vty >= 5.11
                    ,  lens
                    ,  network
                    ,  bytestring
                    ,  containers
                    ,  sqlite-simple
                    ,  data-default
                    ,  text-zipper
                    ,  random
                    ,  uuid
  other-modules:       AppState
                    ,  KeyHandler
                    , CustomEvent
                    , Command
                    , Task
                    , Notification
                    , NotificationHandler
                    , Ack

executable aastraal-client-brick
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , aastraal-client-brick
test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aastraal-client-brick
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/aastraal-client-brick
